--- a/app/default.html
+++ b/app/default.html
@@ -4,15 +4,15 @@
     <!--#head-->
 
     <head>
-        <title>Combo.js</title>
+        <title>Combo</title>
 
         <!--#meta-->
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="author" content="">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+        <meta name="author" content="Eric Harms">
+        <meta name="description" content="A lightweight library for creating user interfaces.">
+        <meta name="keywords" content="javascript, script, frontend, design, development, framework, library">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="theme-color" content="#f3f3f3">
