--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="msapplication-tap-highlight" content="no">
 		<meta name="theme-color" content="#f3f3f3">
+		<meta name="google-site-verification" content="_VlzRghfgoSmyQ7L2UBnWU4PeIhYlc2ltq54LVG0lmE" />
 
 		<!--#links-->
 
@@ -23,6 +24,8 @@
 		<link rel="stylesheet" href="styles/bloom.css">
 		<link rel="stylesheet" href="styles/app.css">
 		<link rel="shortcut icon" href="/images/favicon.png">
+		<link rel="manifest" href="/manifest.json">
+
 	</head>
 
 	<!--#body-->
@@ -34,8 +37,15 @@
 
 		<!--#scripts-->
 
-		<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-		<script src="https://cdn.rawgit.com/combojs/combo-js/3.0.1/dist/combo.js"></script>
+		<script src="https://cdn.rawgit.com/combojs/combo-js/3.0.2/dist/combo.js"></script>
 		<script src="builds/app.js"></script>
+		<script type="application/ld+json">
+			{
+			  "@context": "http://schema.org",
+			  "@type": "Organization",
+			  "url": "http://www.combojs.com",
+			  "logo": "http://www.combojs.com/images/logo.png"
+			}
+		</script>
 	</body>
 </html>
