--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 	<!--#head-->
 
 	<head>
-	 	<title>Combo - A mean component-based user interface library</title>
+	 	<title>Combo.js - A mean component-based user interface library for JavaScript</title>
 
 		<!--#meta-->
 
@@ -16,7 +16,36 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="msapplication-tap-highlight" content="no">
 		<meta name="theme-color" content="#f3f3f3">
-		<meta name="google-site-verification" content="_VlzRghfgoSmyQ7L2UBnWU4PeIhYlc2ltq54LVG0lmE" />
+		<meta name="google-site-verification" content="_VlzRghfgoSmyQ7L2UBnWU4PeIhYlc2ltq54LVG0lmE">
+
+		<!--#opengraph-->
+
+		<meta property="og:type" content="website"> 
+		<meta property="og:url" content="http://www.combojs.com/"> 
+		<meta property="og:title" content="Combo.js"> 
+		<meta property="og:image" content="http://www.combojs.com/images/logo.png"> 
+
+		<!--#twitter-card-->
+
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="http://www.combojs.com/">
+		<meta name="twitter:title" content="Combo.js">
+		<meta name="twitter:description" content="A mean component-based user interface library for JavaScript.">
+		<meta name="twitter:image" content="http://www.combojs.com/images/logo.png"">
+
+		<!--#json-ld-->
+
+		<script type="application/ld+json">
+			{
+				"@context": "http://schema.org",
+				"@type": "website",
+				"url": "http://www.combojs.com/",
+				"name": "Combo.js",
+				"description": "A mean component-based user interface library for JavaScript.",
+				"author": { "@type": "Person", "name": "Eric Harms"},
+				"logo": "http://www.combojs.com/images/logo.png"
+			}
+		</script>
 
 		<!--#links-->
 
@@ -39,13 +68,5 @@
 
 		<script src="https://cdn.rawgit.com/combojs/combo-js/3.0.2/dist/combo.js"></script>
 		<script src="builds/app.js"></script>
-		<script type="application/ld+json">
-			{
-			  "@context": "http://schema.org",
-			  "@type": "Organization",
-			  "url": "http://www.combojs.com",
-			  "logo": "http://www.combojs.com/images/logo.png"
-			}
-		</script>
 	</body>
 </html>
